# workshop-car-purchase-assistant

./: .gitignore  README.md  TODO-bart.md  config.yml  docker-compose.yml  endpoints-docker-compose.yml  endpoints.yml  pyproject.toml
Slides/slidev/: CLAUDE.md  package-lock.json  slides.md
actions/: actions_financing.py  calculate_affordability.py  check_balance.py  check_credit_score.py  check_existing_loans.py  db.py  financing.py  validate_credit_info.py  validate_financial_info.py
custom/: appointment_booking_agent.py  car_research_agent.py  car_shopping_agent.py
data/flows/: calculate_loan.yml  car_research.yml  car_shopping.yml  check_balance.yml  check_credit_score.yml  check_existing_loans.yml  check_loan_affordability.yml  schedule_appointment.yml
docs/: state-contract-design.md
domain/: calculate_loan.yml  car_research.yml  car_shopping.yml  check_balance.yml  check_credit_score.yml  check_existing_loans.yml  check_loan_affordability.yml  schedule_appointment.yml  shared.yml
prompt_templates/: command_generator_prompt.jinja2
scripts/: workshop_start.sh  workshop_verify.sh
servers/appointment_booking_server/: README.md  appointment_server_http.py
servers/car_shopping_server/: .dockerignore  Dockerfile  README.md  agent.py  agent_executor.py  car_shopping_server.py  cars.json  mock_car_api.py  requirements.txt
servers/tavily_search_server/: Dockerfile  README.md  requirements.txt  tavily_search_server.py
sub_agents/appointment_selector/: config.yml  (+1 more)
workshop/: README.md  facilitator-checklist.md  scenarios.md  troubleshooting.md
(+14 files in other folders)
