[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-purchase-assistant"
version = "0.1.0"
description = "A car purchase assistant using MCP."
requires-python = ">=3.10,<3.12"
dependencies = [
    "rasa-pro~=3.15.18",
]

[tool.hatch.build.targets.wheel]
packages = ["actions", "mcp_server"]

[tool.hatch.build]
include = [
    "actions/**/*",
    "mcp_server/**/*",
]
exclude = [
    "data/**/*",
    "db/**/*",
    "domain/**/*",
    "e2e_tests/**/*",
    "sub_agents/**/*",
    "prompt_templates/**/*",
    "*.yml",
    "*.yaml",
    "*.json",
]
